# HFP

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  DENEY_SONUCLARI.md  HF_MODEL_CARD.md  INCELEME_RAPORU.md  LICENSE  NASIL_CALISTIRILIR.md  README.md  RESULTS.md  add_license_headers.py  benchmark.py  benchmark_quality.py  benchmark_test.py  benchmark_text_samples.txt  chat.py  clean_hf_repo.py  cleanup_old_version.sh  debug_memory.py  decode_first_words.py  eval_memory_scaling.py  eval_optimizer_stability.py  eval_passkey.py  eval_passkey_1b.py  first_words.py  hf_test.py  hfp_log.csv  osf_companion.tex  passkey_test.py  push_hf_benchmarks.py  push_to_hf.py  pyproject.toml  requirements.txt  run_experiment.py  run_wrapper.py  smoke_test.py  sweep_ckpt.py  (+3 more)
docs/: paper3_ml_architecture.tex
examples/: adk_app.py  hfp_agent_demo.py
hfp/: __init__.py  agent_integration.py
notebooks/: bench_vram_latency_v14.ipynb  colab_gla_benchmark_v3.ipynb  colab_graft_llama1b.ipynb  colab_graft_qwen_v2.ipynb  colab_graft_qwen_v3.ipynb  colab_graft_qwen_v3_kaggle.ipynb  colab_hypothesis_tests.ipynb  colab_lm_ablation.ipynb  cubic_niche_test.ipynb  degradation_probe_cell.py  hfp_demo_memory.ipynb  kaggle_carry_curriculum.ipynb  kaggle_cubic_longhorizon.ipynb  kaggle_exp_lr_sweep.ipynb  kaggle_gla_lm_benchmark.ipynb  kaggle_gla_lm_benchmark_v2.ipynb  kaggle_graft_diagnostics_v1.ipynb  kaggle_lm_benchmark.ipynb  kaggle_matched_probe.ipynb  kaggle_streaming_mix_test.ipynb  kaggle_tbptt_decay.ipynb  kaggle_trainability_test.ipynb  (+2 more)
review_scripts/: two_tier.py  (+23 more)
(+30 files in other folders)
